# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/apps/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/labels/fixtures/: label_test.json
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/statuses/fixtures/: status_test.json
task_manager/apps/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py
task_manager/apps/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/fixtures/: task.json
task_manager/apps/tasks/migrations/: 0001_initial.py
task_manager/apps/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/users/fixtures/: user.json
task_manager/apps/users/migrations/: 0001_initial.py
task_manager/labels/: apps.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: list.html
task_manager/statuses/: apps.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: create.html  delete.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/templates/: create.html  detail.html  list.html
task_manager/templates/: base.html  home.html  index.html
task_manager/templates/general/: general_delete_confirm.html  general_form.html
task_manager/templates/label/: create.html  delete.html  label_list.html
task_manager/templates/status/: status_list.html
task_manager/templates/task/: delete.html  list.html  task_detail.html  task_list.html
task_manager/templates/user/: list.html
task_manager/tests/: conftest.py  test_filters.py  test_labels.py  test_statuses.py  test_tasks.py  test_user.py
task_manager/users/: apps.py  forms.py  list.html  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: user.json
task_manager/users/migrations/: 0001_initial.py
