[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitry Yarinsky"]

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
packages = [
    { include = "task_manager" },
]
authors = ["Dmitry Yarinsky <pikachyshkaa@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-bootstrap5>=24.3",
    "whitenoise>=6.9.0",
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=2.3.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "rollbar>=1.2.0",
    "django-filter",
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-bootstrap5 = "^24.2"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
rollbar = "1.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
